--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
+    {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     <div class="container">
         <div class="row justify-content-center py-5">
@@ -20,26 +20,16 @@
                     <div class="card">
                         <div class="card-header"><h4>Password Reset</h4></div>
                         <div class="card-body p-5">
-                            <p>Forgot your password? Enter your email address below to reset it.</p>
+                            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
                             {% csrf_token %}
-                            {% for field in form %}
-                                <div class="fieldWrapper pb-4">
-                                    {{ field.errors }}
-                                    {% if 'E-mail:' in field.label_tag %}
-                                        <label class="form-label">Enter e-mail address:</label>
-                                        <div>{{ field }}</div>
-                                    {% else %}
-                                        <label class="form-label">{{ field.label_tag }}</label>
-                                        <div>{{ field }}</div>
-                                    {% endif %}
-                                </div>
-                            {% endfor %}
+                            {{ form.as_p }}
                             <div class="d-grid gap-2">
                                 <button class="btn btn-primary" type="submit">{% trans "Reset My Password" %}</button>
                             </div>
                         </div>
                         <div class="card-footer">
-                            {% blocktrans %}Please <a href="mailto:ctb-support@isb-cgc.org">contact us</a> if you have
+                            {% blocktrans %}Please contact
+                                <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> if you have any
                                 trouble resetting your password.{% endblocktrans %}
                         </div>
                     </div>
