--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -27,56 +27,59 @@
 {% block content %}
     <div class="row">
         <div class="bg-aqua-green-theme text-center py-5">
-            <div class="d-flex justify-content-center py-5">
-                <div class="col-8">
-                    <h1 class="fw-bold pb-3">
+            <div class="d-flex justify-content-center">
+                <div class="col-lg-7 col-sm-10">
+                    <h1 class="fw-bold pt-4">
                         Chernobyl Tissue Bank
                     </h1>
-                    <div class="d-flex justify-content-center">
-                        <div style="font-size: 1.7rem;">
-                            The Chernobyl <span class="fst-italic">(Chornobyl in Ukrainian)</span> Tissue Bank (CTB) is
-                            a repository of samples donated by patients with thyroid tumors who live in the areas
-                            affected by the accident at the Chernobyl Nuclear Power Plant. The purpose of the CTB is to
-                            collect, document, and store these materials, and to facilitate access to these unique
-                            resources by bona fide researchers.
-                        </div>
-                    </div>
+                    <h2 class="py-3">
+                        The CTB is a research tissue bank that was established to collect, document, store, and issue to
+                        bona fide researchers, biological samples donated by patients with thyroid tumors who live in the
+                        vicinity of the site of the Chernobyl Nuclear Power Plant
+                    </h2>
                 </div>
-
             </div>
         </div>
-        <div class="bg-lightgrey-theme d-flex text-center justify-content-center py-5">
-            <div class="col-8 pb-3 fs-4">The CTB website is hosted by the U.S. National Cancer Institute (NCI), <a
-                    href="https://dceg.cancer.gov/" target="_blank" rel="noopener noreferrer">Division of Cancer
-                Epidemiology and Genetics</a>. Learn about DCEG research on the Chernobyl <a target="_blank"
-                                                                                             rel="noopener noreferrer"
-                                                                                             href="https://dceg.cancer.gov/research/what-we-study/chernobyl-nuclear-accident">accident</a>.
+        <div class="bg-lightgrey-theme text-center py-5">
+            <div class="d-flex justify-content-center pb-3">
+                <div class="col-lg-2 text-end">
+                    <img class="me-2" src="{% static 'img/nci-logo.svg' %}" width="120px" alt="nci-logo">
+                </div>
+                <div class="col-lg-8 pt-1 ps-2 text-start">
+                    <h3>
+                        The Chernobyl Tissue Bank site is now hosted by the National Cancer Institute (NCI).
+                    </h3>
+                </div>
             </div>
         </div>
-        <div class="bg-mustard-theme text-center py-5">
+        <div class="bg-mustard-theme text-center pt-5 pb-4">
             <div class="d-flex justify-content-center">
-                <div class="col-6 mx-auto p-5">
+                <div class="col-lg-8 mx-auto p-5">
                     <div class="row">
                         <div class="col stat-card">
-                            <a href="{% url 'about' %}" class="fill-div">
-                                <h4 class="fw-bold aqua-green-text"><i class="fas fa-radiation pb-2"></i><br/>About</h4>
+                            <a href="{% if user.is_verified %} {% url 'dashboard' %} {% else %} {% url 'two_factor:login' %}" {% endif %}
+                               class="fill-div">
+                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-search"></i><br/>Biosample Search
+                                </h4>
+                                <div class="mt-3">Find your biological samples for your study</div>
+                            </a>
+                        </div>
+                        <div class="col stat-card">
+                            <a href="{% url 'about_project' %}" class="fill-div">
+                                <h4 class="fw-bold aqua-green-text"><i class="fas fa-radiation"></i><br/>About</h4>
                                 <div class="mt-3">An introduction to the CTB project</div>
                             </a>
                         </div>
                         <div class="col stat-card">
-                            <a href="{% url 'research' %}" class="fill-div">
-                                <h4 class="fw-bold orange-text"><i class="fas fa-atom pb-2"></i><br>Research and Data Access
-                                </h4>
+                            <a href="{% url 'researchers_page' %}" class="fill-div">
+                                <h4 class="fw-bold orange-text"><i class="fas fa-atom"></i><br/>Research</h4>
                                 <div class="mt-3">Information to research into the Chernobyl accident</div>
                             </a>
                         </div>
                         <div class="col stat-card">
-                            <a href="{% if user.is_verified %} {% url 'dashboard' %} {% else %} {% url 'two_factor:login' %}" {% endif %}
-                               class="fill-div">
-                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-search pb-2"></i><br/>Search the
-                                    Biorepository
-                                </h4>
-                                <div class="mt-3">Find your biological samples for your study</div>
+                            <a href="{% url 'contact' %}" class="fill-div">
+                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-envelope"></i><br/>Contact Us</h4>
+                                <div class="mt-3">For any information or questions</div>
                             </a>
                         </div>
                     </div>
