--- a/templates/accounts/account/email_confirmed.html
+++ b/templates/accounts/account/email_confirmed.html
@@ -18,6 +18,10 @@
                             <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user
                             {{ user_display }}
                             .{% endblocktrans %}</p>
+                        <div class="mt-3"><b>Please Note: Your account will need to be evaluated before you can
+                            fully access your account. The evaluation process can take up to 3 business days. You will
+                            get an email once your account is approved. If you have any questions, please email us at <a
+                                    href='mailto:ctb-support@isb-cgc.org'>ctb-support@isb-cgc.org.</a></b></div>
                     </div>
                 </div>
             </div>
