--- a/templates/accounts/account/signup.html
+++ b/templates/accounts/account/signup.html
@@ -45,6 +45,10 @@
                                 <button class="btn btn-primary" type="submit">{% trans "Register" %} &raquo;
                                 </button>
                             </div>
+
+                            <div class="fst-italic my-3">
+                                Your account will need to be evaluated before you can fully access your account. The evaluation process can take up to 3 business days. You will get an email once your account is approved.
+                            </div>
                         </div>
                     </div>
                 </form>
