Create an account --> Apply for an account

--- a/templates/accounts/account/signup.html
+++ b/templates/accounts/account/signup.html
@@ -42,7 +42,7 @@
                             </div>
 
                             <div class="d-grid gap-2 pt-3">
-                                <button class="btn btn-primary" type="submit">{% trans "Register" %} &raquo;
+                                <button class="btn btn-primary" type="submit">{% trans "Submit" %} &raquo;
                                 </button>
                             </div>
 
