--- a/templates/two_factor/core/login.html
+++ b/templates/two_factor/core/login.html
@@ -74,11 +74,11 @@
                         <div class="card my-3 px-md-4 py-4">
                             <div class="card-body sign-up">
                                 <h4 class="card-title pb-4">
-                                    Create an account <span class="fw-normal fs-5"> to log in and search our biorepository</h4>
+                                    Apply for an account <span class="fw-normal fs-5"> to log in and search our biorepository</h4>
                                 </h4>
                                 <div class="d-grid gap-2">
                                     <a class="btn btn-secondary"
-                                       href="{% url 'account_signup' %}">Create an account</a>
+                                       href="{% url 'account_signup' %}">Apply for an account</a>
                                 </div>
                             </div>
                         </div>
