--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,9 @@
     <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
     {% block header %}{% endblock %}
+    {% if ADOBE_N_DAP_ANALYTICS and not user.is_authenticated %}
+        <script src="https://assets.adobedtm.com/{{ ADOBE_DTM_PATH }}" async></script>
+    {% endif %}
 
     {% if SITE_GOOGLE_ANALYTICS %}
         <!-- Global site tag (gtag.js) - Google Analytics -->
