--- a/templates/accounts/account/login.html
+++ b/templates/accounts/account/login.html
@@ -43,13 +43,13 @@
 {#                        <p><a class="btn btn-secondary secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Password Reset" %}</a></p>#}
 {#                    </div>#}
 {#                </div>#}
-                <div class="card my-3 px-5">
+                <div class="card my-3 px-md-5">
                     <div class="card-body sign-up">
                         <h4 class="card-title">
-                            Don't have an account with CTB?
+                            Apply for an account to log in and search our biorepository
                         </h4>
                         <div class="d-grid gap-2">
-                            <a class="btn btn-secondary" href="{{ signup_url }}">{% trans "Register" %}</a>
+                            <a class="btn btn-secondary" href="{{ signup_url }}">Apply for an account</a>
                         </div>
                     </div>
                 </div>
