login UI updated

--- a/templates/accounts/account/signup.html
+++ b/templates/accounts/account/signup.html
@@ -42,12 +42,12 @@
                             </div>
 
                             <div class="d-grid gap-2 pt-3">
-                                <button class="btn btn-primary" type="submit">{% trans "Submit" %} &raquo;
+                                <button class="btn btn-primary" type="submit">{% trans "Apply" %} &raquo;
                                 </button>
                             </div>
 
                             <div class="fst-italic my-3">
-                                Your application will need to be evaluated before an account can be approved. You will get an email at the above address asking for more information.
+                                Your application will need to be evaluated before an account can be approved. You will get an email at the above address about approval.
                             </div>
                         </div>
                     </div>
