--- a/templates/ctb/research.html
+++ b/templates/ctb/research.html
@@ -34,7 +34,7 @@
                         a proposal via the online application system, accessed through the search function. Researchers
                         can refine their search by sample type and/or data required and obtain an instant report on the
                         availability of samples and data that match the search criteria. Interested researchers can
-                        submit a request for data and materials using an application form and entering key information
+                        submit a request for data and materials using an application form and enter key information
                         on the research question, study design, laboratory and analytic methods, as well as researcher
                         qualifications.
                     </div>
