--- a/templates/accounts/account/email_confirmed.html
+++ b/templates/accounts/account/email_confirmed.html
@@ -19,7 +19,7 @@
                             {{ user_display }}
                             .{% endblocktrans %}</p>
                         <div class="mt-3"><b>
-                            Please Note: Your account application will need to be evaluated before an account can be approved. You will get an email asking for more information.
+                            Please Note: Your account application will need to be evaluated before an account can be approved. You will get an email about approval.
                             If you have any questions, please email us at <a
                                     href='mailto:ctb-support@isb-cgc.org'>ctb-support@isb-cgc.org.</a></b></div>
                     </div>
